# automate-me

./: .gitignore  Cargo.toml  README.md
src/: cli.rs  main.rs
src/commands/: add_task.rs  generate_stand_up.rs  give_me_article.rs  mod.rs
src/files/: project_mapping.json.sample  reading_list.csv
src/notion/: mod.rs  reading_list.rs  stand_up.rs
src/sheet/: mod.rs  timelog.rs
src/slack/: mod.rs  slack_message.rs
