[package]
name = "automate-me"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.19", features = ["derive"] }
anyhow = "1.0.72"
colored = "2.0.4"
dotenv = "0.15.0"
google-sheets4 = "5.0.3"
reqwest = { version = "0.12.5", features = ["json", "cookies"] }
serde = { version = "1.0.181", features = ["derive"]}
tokio = { version = "1.29.1", features = ["full"]}
async-trait = "0.1.72"
serde_json = "1.0.104"
csv = "1.2.2"
rand = "0.8.5"
open = "5.0.0"
chrono = "0.4.30"
